# numeric-glib

./: .travis.yml  README.md  meson.build  meson_options.txt
src/: meson.build  numeric-glib-1.0.vapi  numeric-transform.c  numeric-types.c  numeric-types.h  numeric-vector.c  numeric-vector.h  numeric.c  numeric.h
tests/: decimal-c-test.c  decimal-test.vala  meson.build  numeric-c-test.c  numeric-test.vala
vapi/: libdfp.vapi
