test('numeric', executable('numeric-test', 'numeric-test.vala',
                           dependencies: [glib, gobject, numeric_glib_vala_dep, quadmath, dfp]))
test('numeric-c', executable('numeric-c-test', 'numeric-c-test.c',
                           dependencies: [glib, gobject, numeric_glib_dep, quadmath, dfp]))
