test('numeric', executable('numeric-test', 'numeric-test.vala',
                           dependencies: [glib_dep, gobject_dep, numeric_glib_vala_dep, quadmath_dep, dfp_dep]))
test('numeric-c', executable('numeric-c-test', 'numeric-c-test.c',
                           dependencies: [glib_dep, gobject_dep, numeric_glib_dep, quadmath_dep, dfp_dep]))
